# stock-analysis

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.agents/agents/alert-manager/: README.md
.agents/agents/market-scanner/: README.md
.agents/agents/portfolio-monitor/: README.md
.agents/agents/report-writer/: README.md
.agents/agents/risk-assessor/: README.md
.agents/agents/stock-screener/: README.md
.agents/shared/: ashare.py
.agents/skills/ashare-price-data/: SKILL.md
.agents/skills/ashare-price-data/scripts/: ashare.py  price.py
.agents/skills/company-profile/: SKILL.md
.agents/skills/company-profile/scripts/: profile.py
.agents/skills/financial-data-analysis/: SKILL.md
.agents/skills/financial-data-analysis/scripts/: finance.py
.agents/skills/investment-notebook/: SKILL.md
.agents/skills/investment-thesis/: SKILL.md
.agents/skills/market-context/: SKILL.md
.agents/skills/market-context/scripts/: context.py
.agents/skills/portfolio-analyzer/: SKILL.md
.agents/skills/portfolio-analyzer/scripts/: batch_quote.py  ocr_portfolio.py
.agents/skills/stock-comparison/: SKILL.md
.agents/skills/stock-comparison/scripts/: compare.py
.agents/skills/stock-screener/: README.md  SKILL.md
.agents/skills/stock-screener/scripts/: screener.py  sectors.json
.agents/skills/technical-indicator/: SKILL.md
.agents/skills/technical-indicator/scripts/: indicator.py
docs/: custom-skill-guide.md  data-sources.md  installation.md  usage-guide.md
